--- a/etcd-config-spring-boot-starter/pom.xml
+++ b/etcd-config-spring-boot-starter/pom.xml
@@ -5,34 +5,34 @@
     <parent>
         <groupId>io.github.zzlgo</groupId>
         <artifactId>etcd-config-spring-boot</artifactId>
-        <version>1.0</version>
+        <version>1.1</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
     <artifactId>etcd-config-spring-boot-starter</artifactId>
 
     <properties>
-        <jetcd.version>0.4.1</jetcd.version>
+        <jetcd.version>0.5.11</jetcd.version>
         <snakeyaml.version>1.33</snakeyaml.version>
     </properties>
 
     <dependencies>
         <dependency>
             <groupId>org.springframework</groupId>
-            <artifactId>spring-beans</artifactId>
-            <version>5.3.18</version>
+            <artifactId>spring-context</artifactId>
+            <version>5.3.23</version>
             <scope>provided</scope>
         </dependency>
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter</artifactId>
-            <version>2.1.9.RELEASE</version>
+            <version>2.7.4</version>
             <scope>provided</scope>
         </dependency>
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-configuration-processor</artifactId>
-            <version>2.1.9.RELEASE</version>
+            <version>2.7.4</version>
             <scope>provided</scope>
         </dependency>
         <dependency>
